--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,9 @@ CFLAGS = -g -O2  -Wall -Wextra -Wshadow $(NUCLA) \
         $(pkgconf_CFLAGS) $(fuse_CFLAGS) $(fuse_LIBS)
 LIBS += $(pkgconf_LIBS) $(fuse_LIBS)
 
+if UNITTESTS
 SUBDIRS = test
+endif
 
 man_MANS = doc/man/httpdirfs.1
 CLEANFILES = doc/man/*
