--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -53,7 +53,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install libgumbo-dev libfuse-dev libssl-dev libcurl4-openssl-dev uuid-dev help2man
+        sudo apt-get install libgumbo-dev libfuse-dev libssl-dev libcurl4-openssl-dev uuid-dev help2man libexpat1-dev pkg-config
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
