partially fix FreeBSD compatibility

--- a/meson.build
+++ b/meson.build
@@ -22,6 +22,7 @@ srcs = [
 ]
 
 c_args = [
+    '-Wstrict-prototypes',
     '-pthread',
     '-D_GNU_SOURCE',
     '-DVERSION="' + meson.project_version() + '"'
