fixed execinfo dependency for FreeBSD, address #165

--- a/meson.build
+++ b/meson.build
@@ -28,16 +28,19 @@ c_args = [
     '-DVERSION="' + meson.project_version() + '"'
 ]
 
+cc = meson.get_compiler('c')
+
 gumbo_dep = dependency('gumbo')
 libcurl_dep = dependency('libcurl')
 fuse_dep = dependency('fuse3')
 uuid_dep = dependency('uuid')
 expat_dep = dependency('expat')
 openssl_dep = dependency('openssl')
+execinfo_dep = cc.find_library('execinfo', required: false)
 
 httpdirfs = executable('httpdirfs',
     srcs,
-    dependencies : [gumbo_dep, libcurl_dep, fuse_dep, uuid_dep, expat_dep, openssl_dep],
+    dependencies : [gumbo_dep, libcurl_dep, fuse_dep, uuid_dep, expat_dep, openssl_dep, execinfo_dep],
     c_args: c_args,
     install: true,
     install_dir: get_option('bindir'),
