Code quality improvements
- Improve error messages
- Enable -Wshadow
- Removed the extra 1 byte workaround (I am not sure why this
was needed in the first place.)

--- a/meson.build
+++ b/meson.build
@@ -23,6 +23,7 @@ srcs = [
 
 c_args = [
     '-Wstrict-prototypes',
+    '-Wshadow',
     '-pthread',
     '-D_GNU_SOURCE',
     '-DVERSION="' + meson.project_version() + '"'
