--- a/meson.build
+++ b/meson.build
@@ -3,7 +3,6 @@ project('httpdirfs', 'c',
     license: 'GPL-3.0-or-later',
     default_options: [
         'buildtype=release',
-        'werror=true',
         'warning_level=3'
         ]
 )
@@ -22,6 +21,7 @@ srcs = [
 ]
 
 c_args = [
+    '-Wpedantic',
     '-Wstrict-prototypes',
     '-Wshadow',
     '-pthread',
